<?xml version="1.0"?>
<package format="3">
  <name>rmw_rtt_bench</name>
  <version>0.1.0</version>
  <description>ROS 2 RTT and one-way latency benchmark with configurable RMW and QoS.</description>

  <maintainer email="maintainer@example.com">ROS2 Bench</maintainer>
  <license>Apache-2.0</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rmw</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rmw</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
